--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
   "name": "anniversary-handler",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Deploying to AWS Lambda ⚡️ Bolt for JavaScript (Anniversary BOT)",
+  "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "admin@blendthink.dev",
+  "license": "ISC",
+  "dependencies": {
+    "@slack/bolt": "^3.3.0",
+    "@vendia/serverless-express": "^4.3.8",
+    "axios": "^0.21.1"
+  },
+  "devDependencies": {
+    "serverless": "^2.43.1",
+    "serverless-offline": "^7.0.0"
+  }
 }
